--- a/view/home.html
+++ b/view/home.html
@@ -12,14 +12,14 @@
     <meta name="description" content="RestFull Api Free For you">
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
     <meta name="author" content="">
-    <title>DhaniOfficiall Rest Api</title>
+    <title>Ririn Rest Api</title>
     <script src="https://kit.fontawesome.com/5367cb78eb.js" crossorigin="anonymous"></script>
-    <meta property="og:site_name" name="og:site_name" content="DhaniOfficiall - Rest API'S">
-    <meta property="og:title" name="og:title" content="DhaniOfficiall Rest Api">
+    <meta property="og:site_name" name="og:site_name" content="Ririn - Rest API'S">
+    <meta property="og:title" name="og:title" content="Ririn Rest Api">
     <meta property="og:url" name="og:url" content="https://restapi-free.herokuapp.com/">
-    <meta property="og:description" name="og:description" content="ResFull API">
-<meta property="og:image" content="https://i.pinimg.com/originals/aa/b8/cc/aab8cc12429297246bf9262666595bc7.jpg">
-<link rel="shortcut icon" href="https://i.pinimg.com/originals/aa/b8/cc/aab8cc12429297246bf9262666595bc7.jpg"/>  
+    <meta property="og:description" name="og:description" content="Ririn Vieux - Rest Api">
+<meta property="og:image" content="https://telegra.ph/file/18b9278e24463a345040c.jpg">
+<link rel="shortcut icon" href="https://telegra.ph/file/18b9278e24463a345040c.jpg"/>  
 <script src="sweetalert.min.js"></script>
 <script src="efek-salju.js" type="text/javascript"> </script><br><br><br>
 <meta name="msapplication-TileColor" content="#ffffff">
@@ -43,7 +43,7 @@
     </div>
     <div class="bottom">
         <p>
-            <a href="https://www.tiktok.com/@dhaniofficiall" rel="noopener noreferrer" class="sosmed"><i class="fa-brands fa-tiktok"></i> Tiktok</a>
+            <a href="https://www.tiktok.com/@wearelloud" rel="noopener noreferrer" class="sosmed"><i class="fa-brands fa-tiktok"></i> Tiktok</a>
         </p>
     </div>
 </body>
@@ -57,7 +57,7 @@
 }
 
 html {
-    background: url("https://i.pinimg.com/originals/aa/b8/cc/aab8cc12429297246bf9262666595bc7.jpg") no-repeat center center fixed;
+    background: url("https://telegra.ph/file/18b9278e24463a345040c.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
