--- a/view/index.html
+++ b/view/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Ririn Vieux | Rest Api</title>
+  <title>LALISA | Rest Api</title>
   <link rel="stylesheet" href="vendors/typicons/typicons.css">
   <link rel="stylesheet" href="vendors/css/vendor.bundle.base.css">
   <link rel="stylesheet" href="css/vertical-layout-light/style.css">
@@ -56,10 +56,10 @@
                     <img src="images/faces/face2.jpg" alt="image" class="profile-pic">
                 </div>
                 <div class="preview-item-content flex-grow">
-                  <h6 class="preview-subject ellipsis font-weight-normal">Hafiz
+                  <h6 class="preview-subject ellipsis font-weight-normal">Raisa
                   </h6>
                   <p class="font-weight-light small-text text-muted mb-0">
-                    Semangat ayang,<br/>kalau ada yg jual gk usah di lanjutin ❤️
+                    Kak Minta Dong Apikeynyaa Pliss
                   </p>
                 </div>
               </a>
@@ -71,7 +71,7 @@
                   <h6 class="preview-subject ellipsis font-weight-normal"> Zeryy
                   </h6>
                   <p class="font-weight-light small-text text-muted mb-0">
-                    Semangat Kak,<br/>walau script ini di anggap punya dia :v
+                    Kak Kok Api Downloader Erorr
                   </p>
                 </div>
               </a>
@@ -171,12 +171,12 @@
             </a>
             <div class="collapse" id="downloader-nya">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="api/downloader/fbdl?url=https://www.facebook.com/groups/324777037241707/permalink/326803140372430/?app=fbl&apikey=Ririn">Facebook</a></li>
-                <li class="nav-item"> <a class="nav-link" href="api/downloader/tiktok?url=https://vm.tiktok.com/ZMMQVR5Eh/&apikey=Ririn">Tiktok</a></li>
-                <li class="nav-item"> <a class="nav-link" href="api/downloader/ytplay?q=smart&apikey=Ririn">Youtube Play</a></li>
-                <li class="nav-item"> <a class="nav-link" href="api/downloader/ytsearch?q=smart&apikey=Ririn">Youtube Search</a></li>
-                <li class="nav-item"> <a class="nav-link" href="api/downloader/ytmp3?url=https://youtu.be/vPn_c61mW9s?si=ynnOLiUkXpyUp67d&apikey=Ririn">Youtube Audio</a></li>
-                <li class="nav-item"> <a class="nav-link" href="api/downloader/ytmp4?url=https://youtu.be/vPn_c61mW9s?si=ynnOLiUkXpyUp67d&apikey=Ririn">Youtube Video</a></li>
+                <li class="nav-item"> <a class="nav-link" href="api/downloader/fbdl?url=&apikey=Ririn">Facebook</a></li>
+                <li class="nav-item"> <a class="nav-link" href="api/downloader/tiktok?url=&apikey=Ririn">Tiktok</a></li>
+                <li class="nav-item"> <a class="nav-link" href="api/downloader/ytplay?q=&apikey=Ririn">Youtube Play</a></li>
+                <li class="nav-item"> <a class="nav-link" href="api/downloader/ytsearch?q=&apikey=Ririn">Youtube Search</a></li>
+                <li class="nav-item"> <a class="nav-link" href="api/downloader/ytmp3?url=&apikey=Ririn">Youtube Audio</a></li>
+                <li class="nav-item"> <a class="nav-link" href="api/downloader/ytmp4?url=&apikey=Ririn">Youtube Video</a></li>
               </ul>
             </div>
           </li>
