--- a/view/home.html
+++ b/view/home.html
@@ -12,14 +12,14 @@
     <meta name="description" content="RestFull Api Free For you">
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
     <meta name="author" content="">
-    <title>Ririn Rest Api</title>
+    <title>LALISA Rest Api</title>
     <script src="https://kit.fontawesome.com/5367cb78eb.js" crossorigin="anonymous"></script>
-    <meta property="og:site_name" name="og:site_name" content="Ririn - Rest API'S">
-    <meta property="og:title" name="og:title" content="Ririn Rest Api">
-    <meta property="og:url" name="og:url" content="https://restapi-free.herokuapp.com/">
-    <meta property="og:description" name="og:description" content="Ririn Vieux - Rest Api">
+    <meta property="og:site_name" name="og:site_name" content="LALISA - Rest API'S">
+    <meta property="og:title" name="og:title" content="LALISA Rest Api">
+    <meta property="og:url" name="og:url" content="https://api.lolhuman.xyz/">
+    <meta property="og:description" name="og:description" content="LALISA - Rest Api">
 <meta property="og:image" content="https://telegra.ph/file/18b9278e24463a345040c.jpg">
-<link rel="shortcut icon" href="https://telegra.ph/file/18b9278e24463a345040c.jpg"/>  
+<link rel="shortcut icon" href="https://telegra.ph/LALISA-REST-API1-04-14"/>  
 <script src="sweetalert.min.js"></script>
 <script src="efek-salju.js" type="text/javascript"> </script><br><br><br>
 <meta name="msapplication-TileColor" content="#ffffff">
@@ -57,7 +57,7 @@
 }
 
 html {
-    background: url("https://telegra.ph/file/18b9278e24463a345040c.jpg") no-repeat center center fixed;
+    background: url("https://telegra.ph/LALISA-REST-API1-04-14") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -180,7 +180,7 @@ div.bottom {
 
 <script>
 const typedTextSpan = document.querySelector(".typed-text"),
-    textArray = ["AKTIF", "ONLINE"],
+    textArray = ["활동적인", "온라인"],
     typingDelay = 200,
     erasingDelay = 100,
     newTextDelay = 2e3;
