--- a/view/404.html
+++ b/view/404.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Ririn | 404</title>
+  <title>LALISA | 404</title>
   <link rel="stylesheet" href="/vendors/typicons/typicons.css">
   <link rel="stylesheet" href="/vendors/css/vendor.bundle.base.css">
   <link rel="stylesheet" href="/css/vertical-layout-light/style.css">
