--- a/view/index.html
+++ b/view/index.html
@@ -15,7 +15,7 @@
   <div class="row" id="proBanner">
     <div class="col-12">
       <span class="d-flex align-items-center purchase-popup">
-        <p>Join my group in order to get continuous updates about this rest api.</p>
+        <p>LALISA 화재 정보를 얻으려면 우리 그룹에 가입하세요</p>
         <a href="https://chat.whatsapp.com/Bt5P23LpNvMJz76wiT43Pu" target="_blank" class="btn download-button purchase-button ml-auto">Join Group</a>
         <i class="typcn typcn-delete-outline" id="bannerClose"></i>
       </span>
@@ -329,7 +329,7 @@
                   <div class="d-flex align-items-center justify-content-between justify-content-md-center justify-content-xl-between flex-wrap mb-4">
                     <div>
                       <p class="mb-2 text-md-center text-lg-left">Total Visitor</p>
-                      <h6 class="mb-0" id="visits">00</h6>
+                      <h6 class="mb-0" id="visits">1982</h6>
                     </div>
                     <i class="typcn typcn-eye-outline icon-xl text-primary"></i>
                   </div>
