--- a/view/home.html
+++ b/view/home.html
@@ -18,8 +18,8 @@
     <meta property="og:title" name="og:title" content="LALISA Rest Api">
     <meta property="og:url" name="og:url" content="https://api.lolhuman.xyz/">
     <meta property="og:description" name="og:description" content="LALISA - Rest Api">
-<meta property="og:image" content="https://telegra.ph/file/18b9278e24463a345040c.jpg">
-<link rel="shortcut icon" href="https://telegra.ph/LALISA-REST-API1-04-14"/>  
+<meta property="og:image" content="https://telegra.ph/file/28b946327335dff728a33.jpg">
+<link rel="shortcut icon" href="https://telegra.ph/file/28b946327335dff728a33.jpg"/>  
 <script src="sweetalert.min.js"></script>
 <script src="efek-salju.js" type="text/javascript"> </script><br><br><br>
 <meta name="msapplication-TileColor" content="#ffffff">
@@ -57,7 +57,7 @@
 }
 
 html {
-    background: url("https://telegra.ph/LALISA-REST-API1-04-14") no-repeat center center fixed;
+    background: url("https://telegra.ph/file/28b946327335dff728a33.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
