--- a/view/home.html
+++ b/view/home.html
@@ -9,17 +9,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="RestFull Api Free For you">
+    <meta name="description" content="ROSÈ REST API">
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
     <meta name="author" content="">
-    <title>LALISA Rest Api</title>
+    <title>ROSE Api</title>
     <script src="https://kit.fontawesome.com/5367cb78eb.js" crossorigin="anonymous"></script>
-    <meta property="og:site_name" name="og:site_name" content="LALISA - Rest API'S">
-    <meta property="og:title" name="og:title" content="LALISA Rest Api">
-    <meta property="og:url" name="og:url" content="https://api.lolhuman.xyz/">
+    <meta property="og:site_name" name="og:site_name" content="ROSÈ API">
+    <meta property="og:title" name="og:title" content="ROSÈ Rest Api">
+    <meta property="og:url" name="og:url" content="https://api-rose.com">
     <meta property="og:description" name="og:description" content="LALISA - Rest Api">
-<meta property="og:image" content="https://telegra.ph/file/28b946327335dff728a33.jpg">
-<link rel="shortcut icon" href="https://telegra.ph/file/28b946327335dff728a33.jpg"/>  
+<meta property="og:image" content="https://telegra.ph/file/d72faef4a11b8ceba8814.jpg">
+<link rel="shortcut icon" href="https://telegra.ph/file/d72faef4a11b8ceba8814.jpg"/>  
 <script src="sweetalert.min.js"></script>
 <script src="efek-salju.js" type="text/javascript"> </script><br><br><br>
 <meta name="msapplication-TileColor" content="#ffffff">
@@ -57,7 +57,7 @@
 }
 
 html {
-    background: url("https://telegra.ph/file/28b946327335dff728a33.jpg") no-repeat center center fixed;
+    background: url("https://telegra.ph/file/d72faef4a11b8ceba8814.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
